--- a/AndroidStudioProjects/MeloJin/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/MeloJin/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MeloJin</string>
     <string name="my_music">My music</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
